<resources>
    <string name="app_name">Marzinho Gás</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marzinho Gás</string>
    <string name="nav_header_subtitle">Tel.:(37) 35250200</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pedir">Pedir</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_perfil">Alteração de dados</string>
    <string name="menu_sair">Sair</string>

    <string name="email">E-mail</string>
    <string name="todo">todo</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="n_o_cadastrado">Não é cadastrado ?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="esqueceu_a_senha">Esqueceu a Senha ?</string>
    <string name="clique_aqui">Clique aqui</string>
    <string name="voc_entregador">Você é entregador ?</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="nome">Nome</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="voc_receber_um_e_mail_de_altera_o_de_senh_no_e_mail_cadastrado">Você receberá um e-mail de alteração de senha no e-mail cadastrado</string>
    <string name="quantidade_de_gua">Quantidade de Água</string>
    <string name="quantidade_de_gas">Quantidade de Gás</string>
    <string name="pedir">Pedir</string>
    <string name="sair">Sair</string>
    <string name="configura_es">Configurações</string>
    <string name="alterar_dados">Altere seus dados</string>
    <string name="msg_pedido_user">Todos os pedidos realizados serão registrados aqui.   Faça seu primeiro pedido ;)</string>
    <string name="escolha_o_produto">Escolha o produto</string>
    <string name="dados_do_pedido">Dados do pedido</string>
    <string name="endere_o">Endereço</string>
    <string name="quantidade_de_g_s">Quantidade de gás:</string>
    <string name="podemos_confirmar_seu_pedido">Podemos confirmar seu pedido?</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="endere_o_completo">Endereço Completo</string>
    <string name="bairro">Bairro</string>
    <string name="n_mero">Número</string>
    <string name="refer_ncia_para_entrega">Referência para entrega</string>
    <string name="digite_seu_e_mail_abaixo_para_trocar_sua_senha">Digite seu e-mail abaixo para trocar sua senha</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="pedido_realizado_nobrigado_pela_prefer_ncia">Pedido realizado.\nObrigado pela preferência!</string>
    <string name="desenvolvido_por">Desenvolvido por</string>
    <string name="f_amp_f_desenvolvimento"><![CDATA[F&F Desenvolvimento]]></string>
    <string name="zero">0</string>
    <string name="tabela_de_precos">Tabela de precos</string>
    <string name="gua">Água</string>
    <string name="reais">R$</string>
    <string name="g_s">Gás</string>
    <string name="fechar">fechar</string>
    <string name="alterar_dados_perfil">Alterar Dados</string>
    <string name="fernando_ant_nio_da_silva_filho">Fernando Antônio da Silva Filho</string>
    <string name="rua_salvador_pilo">Rua Salvador pilo</string>
    <string name="produto_pedido">Produto pedido</string>
    <string name="gua_e_g_s">Água e Gás</string>
    <string name="data_do_pedido">Data do pedido</string>
    <string name="_26_03_2020">26/03/2020</string>
    <string name="hora_do_pedido">Hora do pedido</string>
    <string name="_20_33_55">20:33:55</string>
    <string name="verifique_sua_conex_o_com_a_internet">Verifique sua conexão com a internet</string>
    <string name="sem_internet">Sem Internet</string>

    <string-array name="sp_produtos">
        <item>Selecione</item>
        <item>Água</item>
        <item>Gás</item>
        <item>Água e Gás</item>

    </string-array>
</resources>
