<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.marzinhogas.Fragments.fragments_usuario.Pedir.Pedir"
        android:label="@string/menu_pedir"
        tools:layout="@layout/fragment_pedir" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="br.com.marzinhogas.Fragments.fragments_usuario.HistoricoPedidos.Pedidos"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_registro_pedidos" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.com.marzinhogas.Fragments.fragments_usuario.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow_usuario" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="br.com.marzinhogas.Fragments.fragments_usuario.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools_usuario" />

    <fragment
        android:id="@+id/nav_share"
        android:name="br.com.marzinhogas.Fragments.fragments_usuario.Perfil.AlterarDadosPerfil"
        android:label="@string/alterar_dados"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_send"
        android:name="br.com.marzinhogas.Fragments.fragments_usuario.send.SendFragment"
        tools:layout="@layout/fragment_send_usuario" />
</navigation>