<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.marzinhogas.Fragments.home.HomeFragment"
        android:label="@string/menu_pedir"
        tools:layout="@layout/fragment_pedir" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="br.com.marzinhogas.Fragments.gallery.GalleryFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_registro_pedidos" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.com.marzinhogas.Fragments.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="br.com.marzinhogas.Fragments.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="br.com.marzinhogas.Fragments.share.ShareFragment"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_send"
        android:name="br.com.marzinhogas.Fragments.send.SendFragment"
        tools:layout="@layout/fragment_send" />
</navigation>