<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="374dp"
        android:layout_height="490dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="-100dp"
        android:background="@drawable/shadow"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/logo_entrada" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="8dp"
            android:text="Escolha o produto"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/spinner_customization"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <TextView
            android:layout_width="88dp"
            android:layout_height="38dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/quantidade_de_gua"
            android:textColor="@android:color/black" />

        <NumberPicker
            android:id="@+id/nb_qtd_agua"
            android:layout_width="50dp"
            android:layout_height="87dp"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="88dp"
            android:layout_height="38dp"
            android:layout_marginStart="205dp"
            android:layout_marginLeft="205dp"
            android:layout_marginTop="-133dp"
            android:gravity="center"
            android:text="@string/quantidade_de_gas"
            android:textColor="@android:color/black" />

        <NumberPicker
            android:id="@+id/nb_qtd_gas"
            android:layout_width="50dp"
            android:layout_height="87dp"
            android:layout_marginStart="220dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/btn_pedir"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/corner_color"
            android:text="@string/pedir"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>